--- a/style.css
+++ b/style.css
@@ -170,6 +170,8 @@ footer div {
 
 .content-about .foto  img {
 	max-height: 400px;
+	border: 5px #F4AC3D solid;
+	border-radius: 5px;
 }
 .arvore {
 	/*z-index: -10;*/
