--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ p {
 	color: #273b4c;
 	margin-bottom: 10px;
 }
-a {
+ .btn{
 	margin-top: 10px;
 	padding: 11px;
 	text-decoration: none;
@@ -95,12 +95,26 @@ a {
 	display: inline-block;
 	color: #273b4c;
 	font-weight: bold;
+	margin-bottom: 20px;
 }
-a:hover {
+.btn-hover {
+	background-color: #9fe0dc;
+}
+.btn:hover {
 	color: white;
+}
+.btn-hover p {
+	display: none;
+}
+.btn-hover:hover p {
+	display: block;
+}
+.btn-hover:hover span {
+	display: none;
 }
 main {
 	position: relative;
+	overflow-x: hidden;
 }
 .banner {
 	display: flex;
@@ -177,6 +191,9 @@ footer div {
 .arvore {
 	/*z-index: -10;*/
 }
+.content-about__description {
+	z-index: 10;
+}
 .content-about .arvore img {
 	position: absolute;
 	width: 581px;
@@ -195,6 +212,7 @@ footer div {
 .content-about .content-max-width div:first-of-type {
 	margin-right: 20px;
 	margin-bottom: 30px;
+	z-index: 10px;
 }
 .content-list .list-apresentation {
 	text-align: center;
@@ -209,6 +227,10 @@ footer div {
 	min-width: 300px;
 	margin-right: 20px;
 	margin-bottom: 50px;
+}
+.list-item p {
+	max-width: 230px;
+	word-break: break-all;
 }
 .img {
 	background-size: cover;
@@ -357,9 +379,9 @@ body {
 
 /*Time to animate*/
 .x1 {
-	-webkit-animation: moveclouds 15s linear infinite;
-	-moz-animation: moveclouds 15s linear infinite;
-	-o-animation: moveclouds 15s linear infinite;
+	-webkit-animation: moveclouds 13s linear infinite;
+	-moz-animation: moveclouds 13s linear infinite;
+	-o-animation: moveclouds 13s linear infinite;
 }
 
 /*variable speed, opacity, and position of clouds for realistic effect*/
@@ -373,9 +395,9 @@ body {
 	
 	/*Speed will also be proportional to the size and opacity*/
 	/*More the speed. Less the time in 's' = seconds*/
-	-webkit-animation: moveclouds 25s linear infinite;
-	-moz-animation: moveclouds 25s linear infinite;
-	-o-animation: moveclouds 25s linear infinite;
+	-webkit-animation: moveclouds 15s linear infinite;
+	-moz-animation: moveclouds 15s linear infinite;
+	-o-animation: moveclouds 15s linear infinite;
 }
 
 .x3 {
@@ -392,7 +414,7 @@ body {
 }
 
 .x4 {
-	left: 470px; top: -250px;
+	left: -1700px; top: -250px;
 	
 	-webkit-transform: scale(0.75);
 	-moz-transform: scale(0.75);
@@ -405,7 +427,7 @@ body {
 }
 
 .x5 {
-	left: -150px; top: -150px;
+	left: 150px; top: -150px;
 	
 	-webkit-transform: scale(0.8);
 	-moz-transform: scale(0.8);
@@ -437,19 +459,31 @@ body {
 }
 
 @-webkit-keyframes moveclouds {
-	0% {margin-left: 1500px;}
-	100% {margin-left: -1500px;}
+	0% {margin-left: 800px;}
+	100% {margin-left: -800px;}
 }
 @-moz-keyframes moveclouds {
-	0% {margin-left: 1500px;}
-	100% {margin-left: -1500px;}
+	0% {margin-left: 800px;}
+	100% {margin-left: -800px;}
 }
 @-o-keyframes moveclouds {
-	0% {margin-left: 1500px;}
-	100% {margin-left: -1500px;}
+	0% {margin-left: 800px;}
+	100% {margin-left: -800px;}
 }
 
 @media screen and (max-width:800px ) {
+	@-webkit-keyframes moveclouds {
+		0% {margin-left: 400px;}
+		100% {margin-left: -400px;}
+	}
+	@-moz-keyframes moveclouds {
+		0% {margin-left: 400px;}
+		100% {margin-left: -400px;}
+	}
+	@-o-keyframes moveclouds {
+		0% {margin-left: 400px;}
+		100% {margin-left: -400px;}
+	}
  .content-about .arvore img {
  		width: 100%;
  }
